...
    <string name="previous">Previous</string>
    <string name="EMPTY_EMAIL_ADDRESS">Empty Email Address</string>
    <string name="EMPTY_PASSWORD">Empty Password</string>
    <string name="INVALID_PASSWORD">Invalid Password</string>
    <string name="SAME_PASSWORD">Two Passwords should be the same!</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="INCORRECT_PASSWORD">Password is incorrect.</string>
    <string name="NOT_REGISTERED_EMAIL">The Email Address is not registered.</string>
    <string name="EMPTY_EMAIL_OR_PASSWORD">Either Email Address or Password is empty.</string>
    <string name="EMPTY_STRING">""</string>
    <string name="EMPTY_PRODUCT_TYPE">"Product type is empty."</string>
    <string name="EMPTY_PRODUCT_NAME">"Product name is empty"</string>
    <string name="EMPTY_DATE_OF_AVAILABILITY">"Date of availability is empty"</string>
    <string name="EMPTY_ITEM_DESCRIPTION">"Item description is empty"</string>
    <string name="EMPTY_PLACE_OF_EXCHANGE">"Place of exchange is empty"</string>
    <string name="EMPTY_APPROXIMATE_MARKET_VALUE">"Approximate market value is empty"</string>
...
